Hero Section setup. Navigation alignment is fixed.

--- a/src/assests/styles/NavStyle.css
+++ b/src/assests/styles/NavStyle.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@500;700&display=swap");
-
 nav {
   position: relative;
 }
@@ -10,6 +8,7 @@ nav {
   flex-direction: row;
   list-style-type: none;
   justify-content: space-evenly;
+  margin-top: 6px;
 }
 
 .nav > a {
@@ -42,7 +41,7 @@ nav {
     flex-direction: column;
     align-items: center;
     background-color: #495357;
-    width: fit-content;
+    width: 40vw;
     padding: 0px 36vw 10px 36vw;
     position: absolute;
     translate: -84vw;
